cmake_minimum_required(VERSION 3.10)
project(lab6)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(lab6 main.cpp NPC.cpp WanderingKnight.cpp Dragon.cpp Princess.cpp)
enable_testing()
add_executable(tests tests.cpp NPC.cpp WanderingKnight.cpp Dragon.cpp Princess.cpp)
target_link_libraries(tests ${GTEST_LIBRARIES})

add_test(NAME BASIC COMMAND tests)
